# AdsMind

./: .env.example  .gitattributes  .gitignore  CITATION.cff  CODEX_SYNC_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  generate_figures.py  generate_slabs.py  pyproject.toml  refs.bib  streamlit_app.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  tests.yml
A_overleaf_sync_space/: OCD62_DATA_AUDIT.md  OCD62_explanation.md  figure4_proposal.md  intro-line65-analysis.md  main_new.tex  ocd62_results_outline.md  si.tex
A_overleaf_sync_space/sections/: 1_Introduction.tex  2_Method.tex  3_Results.tex  4_DiscussionConclusion.tex  5_Data_Availability.tex
AdsMind/: OUTLINE.md  main.tex  refs.bib
AdsMind/assets/: table1_data.md
AdsMind/old_version/: references.bib
AdsMind/sections/: 1_Introduction.tex  2_Method.tex  3_Results.tex  4_DiscussionConclusion.tex  5_Data_Availability.tex
adsmind/agent/: agent.py  history.py  prompts.py  reporting.py
adsmind/app/: app.py  launcher.py
adsmind/calculators/: __init__.py  base.py  factory.py  mace_backend.py  openmd_backend.py
adsmind/llms/: __init__.py  anthropic_backend.py  base.py  factory.py  google_backend.py  google_vertexai_backend.py  huggingface_backend.py  ollama_backend.py  openai_backend.py  openrouter_backend.py  xai_backend.py
adsmind/tools/: __init__.py  analysis.py  common.py  fragment.py  patches.py  relaxation.py  surface.py  tools.py  visualization.py
adsmind/utils/: config.py  logger.py  preflight.py
datasets/: NOTICE.md  README.md
datasets/cmu20/: cmu20_manifest.csv  download_cmu20_dataset.py
datasets/ocd62/: 005_As48Hf48Ni48_NH2.xyz  006_ocd_76_In10N10Ti30_N.xyz  007_ocd_84_Mo18S72W18_O_N.xyz  008_ocd_87_Ga12Pd36_NH.xyz  011_ocd_105_Se48Sn48_CO.xyz  013_ocd_114_Ag24In12Sc12_CO.xyz  014_Ge36V60_N_N.xyz  019_Ag96Ga32_CH2_O.xyz  021_ocd_208_Al20Au20Y20_NH2.xyz  023_ocd_252_Ag60Ga20_C_O_C.xyz  024_Cd20Y20_C_O.xyz  026_As40Ti40_C_O.xyz  027_Se72Ta36_N.xyz  031_Ca16Pb16Pd16_OH.xyz  034_Hf40Sb24Zn8_CH2_C.xyz  036_ocd_530_Co32Y48_NH.xyz  038_Bi16Pd48_C_C_O.xyz  040_Sb20Ta60_N_N.xyz  042_Na8Pb24_NH2.xyz  044_ocd_632_Al36Zr12_C_O_C.xyz  045_Ga16Mn32V16_CH2_O.xyz  046_ocd_677_Au36Ga36_N_O.xyz  047_Au24Si24Sr12_N.xyz  048_Re27Ti27_NH2.xyz  049_ocd_747_As24V36_CH2_C.xyz  050_Ga24Y24_H.xyz  051_Na12Pb36_H.xyz  052_ocd_778_Co12Sb12Ti12_CO.xyz  053_K20_C_CH2_O.xyz  054_ocd_794_Ni38Se40_CH2_C.xyz  057_Os32S64_CH3.xyz  059_Cu48Ga16_C_CH2_O.xyz  061_Mo36N36_N_O.xyz  ocd62_manifest.csv
datasets/ocd62_overlap12/: 002_Ag18Sr27_N_N.xyz  004_ocd_181_Cu32Se64W16_C_C_O.xyz  005_Cr36N48_CH_O.xyz  006_In18N18Ti36_O_N.xyz  ocd62_overlap12_manifest.csv  overlap12_manifest.csv
datasets/ocd_gmae_representative50/: 016_ocd_108_Ru60Ta20_NH.xyz  024_ocd_31_Cd24Pd24_NO.xyz  030_ocd_88_Ge24Zr40_CH_O.xyz  032_ocd_130_Ge16Mn48_C_O_C.xyz  040_ocd_547_Pd144Si32_C_O.xyz  046_ocd_876_S36Sn24_CH3.xyz
datasets/ocd_gmae_subset24/: 011_ocd_10_Hf16Zn48_C_O_C.xyz  017_ocd_573_Fe16Si24Zr24_CH3.xyz  021_ocd_242_Fe20Mn20P20_NH2.xyz
docs/: architecture.md  calculator_backends.md  llm_backends.md  quickstart.md  references.md  runtime_operations.md  support_matrix.md
ideas/: ablation_report_cn.md  codex_supplementary_ablation_plan.md  codex_workstation_plan.md  reviewer_qa.md
overleaf/: OCD-GMAE62 合并修改清单.md  QTA.md  cmu20_results_framework.md  correct_stats.md  journal_abbrev.bib  main_new.tex  outline.example.tex  refs.bib  si.tex
overleaf/old_version/: 3_Results_old_logic.tex  4_DiscussionConclusion_old.tex  main.tex  si_old.tex
overleaf/sections/: 1_Introduction.tex  1_Introduction_old.tex  2_Method.tex  2_Method_old.tex  3_Results.tex  3_Results_old.tex  4_DiscussionConclusion.tex  5_Data_Availability.tex
paper/: main.tex  si.tex
paper-artifacts/: .gitignore  MANIFEST.md  README.md  RELEASE_NOTES_v0.1.0.md  checksums.txt
paper/sections/: 1_Introduction.tex  2_Method.tex  3_Results.tex  4_DiscussionConclusion.tex
plan/: dft_alignment_plan.md  overleaf_revision_plan.md  revised_cmu_dft_validation_plan.md
plots/Fig2/: claude.csv  failure_summary.csv  gemini.csv  gpt.csv  grok.csv  plot_cmu20_llm_performance_v3.ipynb
references/: README.md
references/markdown/: Draft_AdsKRK论文改进计划.md  Draft_AdsKRK论文改进计划（下）.md  Draft_AdsMind论文改进计划（上）.md  Draft_AdsMind论文改进计划（下）.md  Draft_DFT验证实验执行细则.md  OUTLINE.md  OUTLINE_CN.md  OUTLINE_CN_modify.md  vesta_rendering_guide_outdated.md  腾讯会议0401纪要.md
research/: ABLATION_REMAINING_PLAN.md  CLAUDE_SONNET46_PLAN.md  EXPERIMENT_PLAN.md  NEXT_STEPS_EXECUTION_PLAN.md  NEXT_STEPS_FOR_CODEX.md  README.md  __init__.py  generate_figures.py  generate_slabs.py
research/agent_eval/: README.md  __init__.py  aggregate_ablation_across_backends.py  baseline_utils.py  (+47 more)
tests/: __init__.py  test_ablation_switches.py  test_agent_eval_tools.py  test_agent_history.py  test_agent_runtime_metrics.py  test_aggregate_ablation_across_backends.py  test_compare_ocd_one_shot_to_reference.py  test_config.py  test_config_rename.py  test_entrypoints.py  test_evaluate_ocd_gmae_ground_truth.py  test_llm_backends.py  test_prepare_ocd_gmae.py  test_prepare_ocd_gmae_representative.py  test_rank_one_shot_backend_spread.py  test_rank_one_shot_ranges.py  test_rebuild_ablation_summary.py  test_smoke.py  test_structure_formats.py  test_summarize_multi_backend_ablation.py  test_summarizer_reporting.py  test_tools_package.py
zongmin_project/: CuZnO.txt  LLM Results.xlsx  main.tex
(+33352 files in other folders)
