[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adsmind"
version = "0.1.0"
description = "Agentic atomistic simulation framework for adsorption configuration discovery on surfaces."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Zongmin Zhang", email = "zzhanghw@connect.ust.hk" },
]
maintainers = [
    { name = "AdsMind contributors" },
]
keywords = [
    "adsorption",
    "catalysis",
    "atomistic-simulation",
    "multi-agent-systems",
    "mace",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "ase>=3.26.0",
    "autoadsorbate>=0.2.2",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.33",
    "langchain-ollama>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langgraph>=0.2.0",
    "matplotlib>=3.8",
    "pillow>=10",
    "requests>=2.32.5",
    "pandas>=2.3.2",
    "python-dotenv>=1.0.0",
    "rdkit",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "torch==2.2.1",
    "mace-torch>=0.3.14",
    "numpy<2.0",
    "streamlit>=1.49.1",
    "torch-dftd",
    "transformers",
    "accelerate"
]

[project.scripts]
adsmind = "adsmind.agent.agent:main_cli"
adsmind-preflight = "adsmind.utils.preflight:main"
adsmind-ui = "adsmind.app.launcher:main"

[project.urls]
Homepage = "https://github.com/AI4QC/AdsMind"
Repository = "https://github.com/AI4QC/AdsMind"
Issues = "https://github.com/AI4QC/AdsMind/issues"

[tool.setuptools.packages.find]
include = ["adsmind", "adsmind.*"]
exclude = ["research", "research.*", "tests", "tests.*"]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.6.0",
    "twine>=5.1",
]
research = [
    "matplotlib>=3.8",
    "scienceplots>=2.1.1",
]
weave = ["weave>=0.52.6"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
